# fullstack-machine-learning-inference

./: .env_template  .flake8  .gitignore  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yml  download_model.py  generate_torch_script.py  gunicorn_conf.py  pyproject.toml
app/: config.py  core.py  decorator.py  logger.py  main.py  schemas.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: inference.py
app/feature_store/: core.py  key_builder.py
app/feature_store/backends/: __init__.py  redis.py
deploy/: client-sg.yml  cluster-fargate.yml  elasticcache-redis.yml  vpc-2azs.yml  vpc-ssh-bastion.yml
deploy/task-definition/: app-demo.yml
scripts/: build-push.sh  build.sh  format.sh  lint.sh
visulization/: generate_torch_script.py  tutorial.ipynb
