[tool.poetry]
name = "ml template project"
version = "0.1.0"
description = ""
authors = ["hai che viet <cheviethai123@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, < 3.11"
requests = "^2.24.0"
aioredis = "1.3.1"
uvicorn = "0.13.4"
fastapi = "0.60.1"
torch = "1.12.0"
transformers = "4.20.1"
gunicorn = "*"
gevent = "*"
cryptography = "*"
uvloop = "*"
httptools = "*"
boto3 = "*"
tweepy = "*"
scipy = "*"


[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^21.10b0"
isort = "^5.9.3"
autoflake = "^1.4"
flake8 = "^4.0.1"
types-redis = "3.5.11"


[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 88


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
